added tasi awards

--- a/CV.css
+++ b/CV.css
@@ -136,12 +136,13 @@ text-align: center;
 
 #body
 {
-padding-bottom: 35px;
+padding-bottom: 40px;
 text-align: center;
 }
 
 #footer
 {
+clear: both;
 position: absolute;
 bottom: 0;
 
@@ -149,7 +150,7 @@ left: 0;
 right: 0;
 text-align: center;
 
-height: 35px;
+height: 40px;
 }
 
 a:link
@@ -166,8 +167,8 @@ font-weight: normal;
 }
 a:hover
 {
-color: #000050;
-text-decoration: none;
+color: #FF6600;
+text-decoration: underline;
 font-weight: normal;
 }
 a:active
@@ -204,12 +205,13 @@ text-align: center;
 
 #body
 {
-padding-bottom: 35px;
+padding-bottom: 40px;
 text-align: center;
 }
 
 #footer
 {
+clear: both;
 position: absolute;
 bottom: 0;
 
@@ -217,7 +219,7 @@ left: 0;
 right: 0;
 text-align: center;
 
-height: 35px;
+height: 40px;
 }
 
 a:link
@@ -234,8 +236,8 @@ font-weight: normal;
 }
 a:hover
 {
-color: #000050;
-text-decoration: none;
+color: #FF6600;
+text-decoration: underline;
 font-weight: normal;
 }
 a:active
