--- a/CV.css
+++ b/CV.css
@@ -158,6 +158,8 @@ padding-top: 20px;
 padding-bottom: 20px;
 }
 
+table { table-layout: fixed; }
+td { width: 33%; }
 #header
 {
 padding-bottom: 10px;
@@ -240,6 +242,8 @@ padding-top: 20px;
 padding-bottom: 20px;
 }
 
+table { table-layout: fixed; }
+td { width: 33%; }
 #header
 {
 padding-bottom: 10px;
