--- a/CV.css
+++ b/CV.css
@@ -2,6 +2,7 @@
 /* start css.sty */
 .cmr-17x-x-120{font-size:204%;}
 .cmtt-10{font-family: monospace;}
+.cmti-10{ font-style: italic;}
 p.noindent { text-indent: 0em }
 td p.noindent { text-indent: 0em; margin-top:0em; }
 p.nopar { text-indent: 0em; }
