--- a/CV.css
+++ b/CV.css
@@ -124,6 +124,7 @@ table.multline, table.multline-star {width:100%;}
 td.gather {text-align:center; }
 table.gather {width:100%;}
 div.gather-star {text-align:center;}
+.figure img.graphics {margin-left:10%;}
 /* end css.sty */
 
 *
@@ -156,6 +157,10 @@ padding-right: 100px;
 padding-top: 20px;
 padding-bottom: 20px;
 }
+.tpadded
+{
+padding-top: 20px;
+}
 .bpadded
 {
 padding-bottom: 20px;
@@ -176,12 +181,12 @@ padding: 25px 0px 25px;
 #container
 {
 min-height: 100%;
-margin: 0 auto -70px;
+margin: 0 auto -100px;
 }
 
 #footer, #push
 {
-height: 60px;
+height: 90px;
 padding-top: 10px
 }
 
