--- a/CV.css
+++ b/CV.css
@@ -115,7 +115,7 @@ div.abstract {width:100%;}
 .equation-star td{text-align:center; }
 table.equation-star { width:100%; }
 table.equation { width:100%; }
-table.align, table.alignat, table.xalignat, table.xxalignat, table.flalign {width:100%; margin-left:5%; white-space: nowrap;}
+table.align, table.alignat, table.xalignat, table.xxalignat, table.flalign {width:95%; margin-left:5%; white-space: nowrap;}
 table.align-star, table.alignat-star, table.xalignat-star, table.flalign-star {margin-left:auto; margin-right:auto; white-space: nowrap;}
 td.align-label { width:5%; text-align:center; }
 td.align-odd { text-align:right; padding-right:0.3em;}
@@ -125,6 +125,10 @@ td.gather {text-align:center; }
 table.gather {width:100%;}
 div.gather-star {text-align:center;}
 .figure img.graphics {margin-left:10%;}
+#TBL-1 colgroup{border-left: 1px solid black;border-right:1px solid black;}
+#TBL-1{border-collapse:collapse;}
+#TBL-1 colgroup{border-left: 1px solid black;border-right:1px solid black;}
+#TBL-1{border-collapse:collapse;}
 /* end css.sty */
 
 *
