--- a/CV.css
+++ b/CV.css
@@ -1,5 +1,6 @@
  
 /* start css.sty */
+.cmmi-10{font-style: italic;}
 .cmr-17x-x-120{font-size:204%;}
 .cmtt-10{font-family: monospace;}
 .cmti-10{ font-style: italic;}
